small fix for price alignment

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -29,7 +29,7 @@ h1, h2 {
 }
 
 .card-text {
-  text-align: center;
+  text-align: end;
 }
 
 .card_show{
